--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "^1.16.6",
     "dotenv": "^8.2.0",
     "expo": "^42.0.0",
     "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "react": "16.13.1",
